# MX17_Geant

./: CMakeLists.txt  README.md  mm_sim.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  EventData.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SimConfig.hh  SteppingAction.hh
ls_calibration/: analyze_ls_calibration.py
macros/: run_default.mac
scripts/: analyze_full_experiment.py  build.sh  collect_results.py  plot_results.py  plot_track_stats.py  setup_lxplus.sh  submit_condor.py  submit_condor_full.py  submit_condor_lscalib.py  submit_condor_sr90.py
sr90_calibration/: Sr90_Y90_Beta_Spectrum.csv  analyse_sr90_calibration.py  analyze_sr90_calibration.py
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
